# permit

./: .env.example  .gitignore  SCAFFOLD_DETAILS.md  docker-compose.yml
.github/: dependabot.yml
backend/: API_RESPONSE_CONTRACT.md  Dockerfile  pyproject.toml
backend/app/: main.py  pre_start.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  db.py  exceptions.py
backend/app/schemas/: response.py
backend/permit/: initial_data.py  main.py  pre_start.py  utils.py
backend/permit/api/: deps.py  main.py
backend/permit/api/routes/: login.py
backend/permit/core/: config.py  db.py  security.py
migrations/: 01_init.sql
